# finagent

./: README.md  Suggestions.md  pyproject.toml  report.md
src/finagent/: crew.py  main.py
src/finagent/config/: agents.yaml  tasks.yaml
src/finagent/tools/: custom_tool.py  youtubesearch.py
